--- a/architecture.html
+++ b/architecture.html
@@ -5,5 +5,12 @@
   <body>
     <h1>Architecture</h1>
     <a href="index.html">Home</a>
+    <br>
+    <center>
+    <p>[okay lets actually put the text here somehow. inserting a slideshow was fun but it looks kind of not good.
+    <br>Maybe another google docs embed here]</p>
+    <h2>Slideshow Presentation</h2>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQTvz1k97XflXzlS7DCE3_pJPOH4Ti05bIPQ6rRFcg4y_Kuz1ujv06lwPdbxNcAQ9ThiXvvv1recimC/embed?start=true&loop=false&delayms=15000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    </center>
   </body>
 </html>
