--- a/requirements.html
+++ b/requirements.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Requirements</h1>
-    <a href="index.html">Home</a>
+    <a href="requirements.html">Home</a>
     <br>
     <iframe src="https://docs.google.com/document/d/e/2PACX-1vS4dVr378sfBekbUlUoE6dchs9qOklKn-zXisKZ5kR7XFfpM_7m_ZNlDUfhdGNytyn_OhMt2K5AIukf/pub?embedded=true" width="960" height="569"></iframe>
   </body>
