--- a/testreport.html
+++ b/testreport.html
@@ -3,9 +3,8 @@
     <title>FSC</title>
   </head>
   <body>
-    <h1>Test Report</h1>
+    <h1>User Stories</h1>
     <a href="index.html">Home</a>
-    <br>
-   <iframe src="https://docs.google.com/document/d/e/2PACX-1vR8zgAPJLT2ao1DYUfJ7ICDF2lk7d-_UgxM1P2OhVfoGY1iSzO0FLUe4VAsMMRPKDxfYRLsC7v5O5uZ/pub?embedded=true"></iframe>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vR-gFyk7AzX9nkP73EBTCTmVN3HzOOEtv278npRE4-gdVslmcZxFFIjhPCMVTW0imOYnmvbp7WHOKQA/pub?embedded=true" height="100%" width="90%"></iframe>
   </body>
 </html>
