--- a/testreport.html
+++ b/testreport.html
@@ -1,25 +1,10 @@
-<p><strong><span style="font-size: 24px;">FSC Test Report: Tomato Project</span></strong><span style="font-size: 24px;"><br></span><br></p>
-<p><u><em><span style="font-size: 20px;">1. Component Testing</span></em></u></p>
-<p>During the development of the Tomato project, we conducted component testing to ensure that each individual part of the app was functioning as intended before integrating them into the whole system. We used JUnit to perform unit testing on the various classes and methods that were created. We created tests for adding, editing, and deleting reminders, as well as for setting and canceling notifications. We also tested the functionality of the app&rsquo;s UI components, such as the buttons, text fields, and radio buttons.</p>
-<p><br></p>
-<p>To select the tests and test data, we followed a structured approach based on the expected requirements. We created test cases for each function and method of the app, taking into account possible edge cases and scenarios that could occur. We also created test data to ensure that the app could handle different types of inputs and outputs. Our choices were good as they covered all the requirements of the app, and helped us to identify and fix any bugs or issues.</p>
-<p><br></p>
-<p><span style="font-size: 20px;"><em><u>2. System Testing</u></em></span></p>
-<p>After conducting component testing, we performed system testing to test the integration of all the individual components into the complete app. We tested the functionality of the app as a whole, including adding, editing, and deleting reminders, and setting and canceling notifications. We also tested the app&rsquo;s user interface and user experience to ensure that it was user-friendly and easy to use.</p>
-<p><br></p>
-<p>We used manual testing to perform system testing and selected test cases and test data that covered all the expected requirements of the app. We also used the Android Studio Emulator to test the app on different devices and screen sizes. We documented the test results and any issues that we encountered during testing, and used them to improve the app&rsquo;s performance and functionality.</p>
-<p><br></p>
-<p><u><em><span style="font-size: 20px;">3. Acceptance Testing</span></em></u></p>
-<p>During the system testing phase, we also conducted acceptance testing to ensure that the app met the acceptance criteria on our user stories. We used the acceptance criteria to drive our system testing and ensure that each user story was completely implemented. The user stories we tested included:</p>
-<p><br></p>
-<p>- As a user, I want to be able to add a reminder to the app.</p>
-<p>- As a user, I want to be able to edit and delete reminders in the app.</p>
-<p>- As a user, I want to be able to set a notification for a reminder.</p>
-<p>- As a user, I want to be able to cancel a notification for a reminder.</p>
-<p><br></p>
-<p>We found that all the user stories were accepted as completely implemented after conducting acceptance testing.</p>
-<p><br></p>
-<p>Overall, our testing approach helped us to identify and fix any issues with the Tomato, and ensure that it was functioning as intended. We were able to meet all the expected requirements and acceptance criteria, and deliver a high-quality product to our users.</p>
-<p><br></p>
-<p><br></p>
-<p><br></p>
+<html>
+  <head>
+    <title>FSC</title>
+  </head>
+  <body>
+    <h1>Test Report</h1>
+    <a href="index.html">Home</a>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vR8zgAPJLT2ao1DYUfJ7ICDF2lk7d-_UgxM1P2OhVfoGY1iSzO0FLUe4VAsMMRPKDxfYRLsC7v5O5uZ/pub?embedded=true"></iframe>
+  </body>
+</html>
