fixed html layout

--- a/requirements.html
+++ b/requirements.html
@@ -4,8 +4,8 @@
   </head>
   <body>
     <h1>Requirements</h1>
-    <a href="requirements.html">Home</a>
+    <a href="index.html">Home</a>
     <br>
-    <iframe src="https://docs.google.com/document/d/e/2PACX-1vS4dVr378sfBekbUlUoE6dchs9qOklKn-zXisKZ5kR7XFfpM_7m_ZNlDUfhdGNytyn_OhMt2K5AIukf/pub?embedded=true" width="960" height="569"></iframe>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vS4dVr378sfBekbUlUoE6dchs9qOklKn-zXisKZ5kR7XFfpM_7m_ZNlDUfhdGNytyn_OhMt2K5AIukf/pub?embedded=true" height="100%" width="90%"></iframe>
   </body>
 </html>
