--- a/design.html
+++ b/design.html
@@ -6,8 +6,8 @@
     <h1>Design document</h1>
     <a href="index.html">Home</a>
     <br>
-    <iframe src="https://docs.google.com/document/d/e/2PACX-1vSQkp70f9ZtrpCskTf5aSNUBCcZG2Ulmvu8rg4bGNBbPTTmJzZM-c2UgkZhHas9712byv0c8mCTUHea/pub?embedded=true" width="960" height="569"></iframe>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vSQkp70f9ZtrpCskTf5aSNUBCcZG2Ulmvu8rg4bGNBbPTTmJzZM-c2UgkZhHas9712byv0c8mCTUHea/pub?embedded=true" height="100%" width="90%"></iframe>
     <h2>Requirements</h2>
-    <iframe src="https://docs.google.com/document/d/e/2PACX-1vS4dVr378sfBekbUlUoE6dchs9qOklKn-zXisKZ5kR7XFfpM_7m_ZNlDUfhdGNytyn_OhMt2K5AIukf/pub?embedded=true" width="960" height="569"></iframe>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vS4dVr378sfBekbUlUoE6dchs9qOklKn-zXisKZ5kR7XFfpM_7m_ZNlDUfhdGNytyn_OhMt2K5AIukf/pub?embedded=true" height="100%" width="90%"></iframe>
   </body>
 </html>
