--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <title>FSC Home</title>
   </head>
   <body>
-    <h1>Flashy Salad Collective Project Landing Page</h1>
+    <h1>Team Flashy Salad Collective: Project Tomato</h1>
+    <h2>Zaynab Badawy, David Kuntz, and Bryan Robles</h2>
+    <p>This is the landing page for our project, named Tomato. It is a basic reminder app that
+      creates and deletes reminders, and allows you to set notifications and delete them.</p>
+    </br>
     <a href="problem.html">Problem Statement</a>
     <a href="userstories.html">User Stories</a>
     <a href="requirements.html">Requirements</a>
